--- a/wwwroot/themes/Default/tiles.scss
+++ b/wwwroot/themes/Default/tiles.scss
@@ -1,26 +1,41 @@
 $baseSize: 3.75rem;
 $padding: 0.5rem;
 $margin:0;
-.db-group {
-    width:fit-content;
-    height:fit-content;
-    .items {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, $baseSize);
-        grid-template-rows: repeat(auto-fill, $baseSize);
-        gap: 0;
-        grid-auto-flow: column dense;
-        height:100%;
-    }
-    @for $i from 2 through 10 {    
-        &.height-#{$i} {
-            $height: ($baseSize * $i);
-            min-height: $height;
-            height: $height;
+@media screen and (min-width:720.001px) {
+        
+    .db-group {
+        width:fit-content;
+        height:fit-content;
+        background: rgba(0,0,0,0.5);
+        .items {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, $baseSize);
+            grid-template-rows: repeat(auto-fill, $baseSize);
+            gap: 0;
+            grid-auto-flow: column dense;
+            height:100%;
+        }
+        @for $i from 2 through 10 {    
+            &.height-#{$i} {
+                $height: ($baseSize * $i);
+                min-height: $height;
+                height: $height;
+            }
         }
     }
 }
 
+@media screen and (max-width:720px) {
+
+    .db-group {
+        justify-content: center;
+        .items {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+    }
+}
 .separator {
     display: none;
 }
